--- a/TODO.zh.org
+++ b/TODO.zh.org
@@ -1,18 +1,42 @@
 * szqzj 计划
 
-** TODO 使用 ~initramfs~ 作为根文件的启动方式
-** TODO 用作远程控制操作的openssh/telnetd
+** TODO 网络启动支持
+** TODO 多种根文件系统的启动方式
+*** TODO initramfs
+*** TODO squashfs
+*** TODO ext4
+*** TODO btrfs
+** TODO 支持网络校时
+*** NTP
+** TODO 用作终端界面远程控制操作的工具
+*** SSH
+*** TELNET
 ** TODO 用于文件共享/下载的工具
 *** TODO FTP/SFTP 上传下载工具
 *** TODO HTTP CLIENT/SERVER 工具
 *** TODO SAMBA 工具
 *** TODO NFS 工具
 ** TODO 用作恢复磁盘文件的工具
+*** TODO 恢复文件系统内的文件
+*** TODO 恢复磁盘分区
+** TODO 用作磁盘备份的工具
+*** TODO 基于扇区的备份
+*** TODO 基于文件系统的备份
 ** TODO 用作网络诊断测试的工具
+*** TODO 端口扫描工具
+*** TODO 链路速度测试工具
+** TODO 自动配置网络
+*** TODO 自动IP地址获取 DHCPv4
+*** TODO autoipd 支持
+*** TODO mdns 支持
 ** TODO 用作性能测试的工具
 ** TODO 用作诊断硬件的工具
 ** TODO 用作文件系统格式化的工具
 ** TODO 主流文件系统支持
 ** TODO 无线网络支持
-   
-
+*** 80211 无线网络支持
+*** 蓝牙网络支持
+** TODO VPN支持
+*** TODO Wireguard
+*** TODO pptp
+*** TODO OpenVPN
